--- a/photoshare/photoshare/MailMessageTable.xib
+++ b/photoshare/photoshare/MailMessageTable.xib
@@ -28,7 +28,7 @@
                 </tableView>
                 <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="1" id="far-2X-78a">
                     <rect key="frame" x="0.0" y="188" width="320" height="2"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                 </progressView>
                 <searchBar contentMode="redraw" id="SiA-cx-QTm">
                     <rect key="frame" x="0.0" y="101" width="320" height="44"/>
@@ -48,7 +48,7 @@
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="7gW-a1-0yE">
                     <rect key="frame" x="0.0" y="145" width="320" height="44"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.12599232769999999" green="0.38773500519999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="Select All">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
